copy past root files fixed

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" itemscope itemtype="http://schema.org/WebPage">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,28 +14,30 @@
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="msapplication-TileColor" content="#222222" />
     <meta name="theme-color" content="#ffffff" />
-    <!-- Search Engine -->
-    <title>JP Rajalim - Computer Nerd From Nepal</title>
-    <meta
-      name="description"
-      content="JP Rajalim is an online entrepreneur, web developer, computer nerd, and preferred programming language is  Python,  from all  the way Nepal"
-    />
-    <meta name="image" content="./img/jprajalim.jpg" />
-    <!-- Schema.org for Google -->
-    <meta itemprop="name" content="JP Rajalim - Computer Nerd From Nepal" />
-    <meta
-      itemprop="description"
-      content="JP Rajalim is an online entrepreneur, web developer, computer nerd, and preferred programming language is  Python,  from all  the way Nepal"
-    />
-    <meta itemprop="image" content="./img/jprajalim.jpg" />
-    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="JP Rajalim - Computer Nerd From Nepal" />
-    <meta
-      name="og:description"
-      content="JP Rajalim is an online entrepreneur, web developer, computer nerd, and preferred programming language is  Python,  from all  the way Nepal"
-    />
-    <meta name="og:type" content="website" />
 
+    <!-- Primary Meta Tags -->
+    <title>JP Rajalim - Computer Nerd From Nepal</title>
+    <meta name="title" content="JP Rajalim - Computer Nerd From Nepal" />
+    <meta name="description" content="JP Rajalim is an online entrepreneur, web developer, computer nerd, and preferred programming language is  Python,  from all  the way Nepal" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jprajalim.com/" />
+    <meta property="og:title" content="JP Rajalim - Computer Nerd From Nepal" />
+    <meta property="og:description" content="JP Rajalim is an online entrepreneur, web developer, computer nerd, and preferred programming language is  Python,  from all  the way Nepal" />
+    <meta property="og:image" content="./assets/img/jprajalim_lg.jpeg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://jprajalim.com/" />
+    <meta
+      property="twitter:title"
+      content="JP Rajalim - Computer Nerd From Nepal"
+    />
+    <meta property="twitter:description" content="JP Rajalim is an online entrepreneur, web developer, computer nerd, and preferred programming language is  Python,  from all  the way Nepal" />
+    <meta property="twitter:image" content="./assets/img/jprajalim_lg.jpeg" />
+
+    <!-- Google font -->
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap"
       rel="stylesheet"
